overflow issues fixed 10.3

--- a/functionality/styleMedium.css
+++ b/functionality/styleMedium.css
@@ -11,7 +11,7 @@ body{
     align-items: center;
     transition:  2s;
     background-image: radial-gradient(circle, yellow, orange);
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 
